--- a/sample/app/static/css/base-style.css
+++ b/sample/app/static/css/base-style.css
@@ -1,680 +1,3 @@
-#attribute-details-div button {
-	background-color: #ffffff;
-	border-radius: 3px;
-	border: 1px solid grey;
-	margin: 5px;
-}
-
-#calc-operators, #calc-constants, #calc-attribute-reference {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	display: inline;
-}
-
-#attribute-details-errors, #attribute-name-errors, #object-name-errors {
-	color: #ff0000;
-	margin-left:20px;
-}
-
-#cancel-edit-object-button {
-	margin-left: 20px;
-}
-
-#homepage-toggle {
-	margin-bottom: 20px;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input {display:none;}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #ff8040;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #ff8040;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-.page-menu-button {
-	text-align:center;
-	position: fixed;
-	right: 20px;
-	top: 140px;
-	width:50px;
-	height:50px;
-	border-radius: 5px;
-	background-color: rgba(0,0,0,0.3);
-	color: #ffffff;
-}
-
-.page-menu-button:hover {
-	background-color: rgba(0,0,0,0.6);
-}
-
-.page-menu-button i {
-	line-height:50px;
-}
-
-#element-menu-button {
-	right: 85px;
-	display:none;
-}
-
-.side-menu {
-	position: fixed;
-	right: 20px;
-	top: 190px;
-	width:250px;
-	border-radius: 5px;
-	background-color: rgba(0,0,0,0.6);
-	color: #ffffff;
-	padding:10px;
-}
-
-.side-menu h4, .side-menu h6 {
-	color: #ffffff;
-}
-
-#new-page-name {
-	width:150px;
-	display: inline-block;
-}
-
-#form-object-list {
-	padding-left: 10px;
-}
-
-.form-field-delete {
-	cursor: pointer;
-	margin-right: 5px;
-}
-
-#user-logo {
-    font-size: 30px;
-    display: inline-block;
-    font-weight: 800;
-}
-
-#project-logo-input {
-	margin-bottom: 20px;
-}
-
-#remove-logo-button {
-	line-height: 60px;
-	margin-right: 20px;
-	font-size: 20px;
-	cursor: pointer;
-}
-
-.user-form {
-	margin-bottom: 10px;
-}
-
-#element-text-editor-container {
-	padding:20px;
-}
-
-#element-text-editor-query-contianer {
-	
-}
-
-.object-query-odd {
-	background-color: #1abc9c;
-	color: #ffffff;
-}
-
-.object-query-block {
-	display: inline-block;
-	width: 100%;
-	border: 1px solid #ccc;
-	padding: 10px;
-	border-radius:3px;
-	margin-bottom: 0px !important;
-	background-color: #ffffff;
-    color: #333;
-}
-
-.object-query-block select, .object-query-block input {
-	border: 0px;
-	width: 100%;
-}
-
-.object-query-odd select, .object-query-odd select option {
-	background-color: #1abc9c;
-}
-
-.object-query-container {
-	margin: 10px;
-}
-
-#object-query-object, #object-query-field-display {
-	
-}
-
-#element-inner-text .query {
-	cursor: pointer;
-}
-
-#element-inner-text .query:hover {
-	color: #1abc9c;
-}
-
-#element-inner-text * {
-	margin: 0;
-}
-
-.element-text-edit-btn {
-	width:30px;
-	margin: 5px;
-	display: inline-block;
-	background-color: rgb(64, 63, 63);
-	border: 0px;
-	height: 30px;
-}
-
-#element-text-font-size-dropdown {
-	width: 73px;
-}
-
-#edit-rich-text-btn {
-	font-size: 10px;
-	cursor: pointer;
-	margin: 0;
-	color: #ffffff;
-	float: right;
-	line-height: 27px;
-}
-
-#edit-rich-text-btn:hover {
-	color: #1abc9c;
-}
-
-#start-query-btn {
-	cursor: pointer;
-	color: #ffffff;
-}
-
-#start-query-btn:hover {
-	color: #1abc9c;
-}
-
-#query-builder  {
-	right: 270px;
-	width: 500px;
-}
-
-#multi-query-builder {
-    left: 270px;
-    width: 1000px;
-    top: 120px;
-    background-color: rgba(0,0,0,0.8);
-}
-
-#extend-page-btn {
-	margin: auto;
-	bottom: 0px;
-	position: absolute;
-	width:100%;
-	cursor: pointer;
-	background-color: #ffffff;
-}
-
-#extend-page-btn i {
-	margin-left: 50%;
-	margin-right: 50%;
-	margin-top:10px;
-	font-size: 20px;
-}
-
-#extend-page-btn h4 {
-	margin-bottom: 15px;
-	text-align: center;
-}
-
-#preview-frame {
-	height: 1000px;
-	width: 100%;
-}
-
-.tooltip {
-	left: 30px;
-    position: relative;
-    display: inline-block;
-    opacity: 1 !important;
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 250px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 5px;
-    border-radius: 6px;
- 
-    /* Position the tooltip text - see examples below! */
-    position: absolute;
-    z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-}
-
-.home-buttons .form-control {
-	margin-bottom: 15px;
-}
-
-.home-buttons {
-}
-
-.inactiveLink {
-   pointer-events: none;
-   cursor: pointer;
-}
-
-.header-deploy-link {
-	background-color: #1ABc9C;
-	color: #ffffff !important;
-}
-
-.header-deploy-link:hover {
-	background-color: rgba(10,74,61,0.4);
-}
-
-
-.errorlist li {
-	color: #000000;
-	list-style-type: none;
-	border: 3px solid red;
-	border-radius: 10px;
-	padding: 20px;
-	background-color: #ffbfbf;
-}
-
-form p input {
-  display: inline-block;
-  height: 34px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555555;
-  background-color: #ffffff;
-  background-image: none;
-  border: 1px solid #cccccc;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-form p input:focus {
-  border-color: #66afe9;
-  outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
-}
-form p input::-moz-placeholder {
-  color: #999999;
-  opacity: 1;
-}
-form p input:-ms-input-placeholder {
-  color: #999999;
-}
-form p input::-webkit-input-placeholder {
-  color: #999999;
-}
-form p input::-ms-expand {
-  border: 0;
-  background-color: transparent;
-}
-form p input[disabled],
-form p input[readonly],
-fieldset[disabled] form p input {
-  background-color: #eeeeee;
-  opacity: 1;
-}
-form p input[disabled],
-fieldset[disabled] form p input {
-  cursor: not-allowed;
-}
-textarea form p input {
-  height: auto;
-}
-
-.jumbotron {
-	margin-bottom: 100px;
-}
-
-.project-sidebar {
-	background-color: #3f3f3f;
-	height: 500px;
-	width: 70px;
-	left: 0;
-}
-
-#toolbar {
-	position: fixed;
-	z-index: 399;
-	top: 0;
-	left: 0;
-	width: 60px;
-	height: 100%;
-	color: #FFF;
-	background-color: #222;
-}
-
-#toolbar.toolbar-left {
-	right: auto;
-	left: 0;
-}
-
-#toolbar ~ #header #header-wrap { padding: 0 0 0 60px; }
-
-#toolbar.toolbar-left ~ #header #header-wrap { padding: 0 60px 0 0; }
-
-#toolbar ul {
-	margin: 0;
-	list-style: none;
-}
-
-#toolbar nav li {
-	position: relative;
-	display: block;
-}
-
-#toolbar nav li a {
-	display: block;
-	position: relative;
-	text-align: center;
-	color: #FFF;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
-	-webkit-transition: all .3s ease;
-	-o-transition: all .3s ease;
-	transition: all .3s ease;
-}
-
-#toolbar nav li a i {
-	font-size: 20px;
-	width: 60px;
-	height: 60px;
-	line-height: 60px;
-	margin: 0;
-}
-
-#toolbar nav li a:hover i { background-color: #333; }
-
-#toolbar nav li span {
-	position: absolute;
-	opacity: 0;
-	width: auto;
-	top: 0;
-	right: 50px;
-	background-color: #333;
-	color: #FFF;
-	padding: 0 20px 0 5px;
-	height: 60px;
-	line-height: 60px;
-	font-size: 15px;
-	letter-spacing: 1px;
-	white-space: nowrap;
-	pointer-events: none;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.15);
-	-webkit-transition: all .2s ease;
-	-o-transition: all .2s ease;
-	transition: all .2s ease;
-}
-
-#toolbar.toolbar-left nav li span {
-	right: auto;
-	left: 50px;
-	padding: 0 20px 0 5px;
-}
-
-#toolbar nav li a:hover span {
-	opacity: 1;
-	right: 60px;
-	pointer-events: auto;
-}
-
-#toolbar.toolbar-left nav li a:hover span {
-	right: auto;
-	left: 60px;
-}
-
-#header, #footer {
-	z-index: 1000;
-}
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1000; /* Sit on top */
-    left: 0;
-    top: 0;
-    padding-top: 100px;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* Modal Header */
-.modal-header {
-    padding: 2px 16px;
-    /* background-color: #5cb85c; */
-    color: white;
-    border: 0px !important;
-}
-
-/* Modal Body */
-.modal-body {padding: 2px 16px;}
-
-/* Modal Footer */
-.modal-footer {
-    padding: 2px 16px;
-    /* background-color: #5cb85c; */
-    color: white;
-    border: 0px !important;
-}
-
-/* Modal Content */
-.modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-    from {top: -300px; opacity: 0} 
-    to {top: 0; opacity: 1}
-}
-
-@keyframes animatetop {
-    from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
-}
-
-#projectTitleButton {
-	cursor: pointer;
-}
-
-#projectTitleButton:hover {
-	color: #000000;
-}
-
-#projectDescButton {
-	cursor: pointer;
-}
-
-#projectDescButton:hover {
-	color: #000000;
-}
-
-.project-tab {
-	display:none;
-	margin-top: 10px;
-}
-
-.project-active-tab {
-	display: block;
-}
-
-.project-content {
-	height: 1000px;
-}
-
-.draggable-element {
-	cursor: move;
-}
-
-.add-attribute-btn {
-	border-color: #008000;
-	border-radius: 50%;
-	color: #ffffff;
-	background-color: #008000;
-	margin-left: 20px;
-}
-
-.delete-attribute-btn {
-	border-color: #ff0000;
-	border-radius: 50%;
-	color: #ffffff;
-	background-color: #ff0000;
-	margin-left: 20px;
-}
-
-.object-attributes {
-	display: inline-block;
-	width: 300px;
-	margin-left: 20px; 
-	margin-bottom: 10px;
-}
-
-.object-attributes-name {
-	display: inline-block;
-	width: 300px;
-	margin-bottom: 10px;
-}
-
-.new-attribute {
-	display: inline;
-}
-
-#workflow-item {
-    width: 200px;
-    height: 80px;
-    padding: 10px 50px 10px 50px;
-    color: white;
-    position: relative;
-    background: #51a8ff;
-  }
-#workflow-item:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    border-left: 40px solid white;
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-  }
-#workflow-item:before {
-    content: "";
-    position: absolute;
-    right: -40px;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    border-left: 40px solid #51a8ff;
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-  }
-
 /* ----------------------------------------------------------------
 	Basic
 -----------------------------------------------------------------*/
@@ -3261,13 +2584,13 @@ body.side-panel-left.side-push-panel.stretched #header.sticky-header .container 
 
 #side-panel .side-panel-wrap {
 	position: absolute;
-	top: 70px;
+	top: 0;
 	left: 0;
 	bottom: 0;
 	width: 330px;
 	height: 100%;
 	overflow: auto;
-	padding: 10px 70px 50px 40px;
+	padding: 50px 70px 50px 40px;
 }
 
 body.device-touch #side-panel .side-panel-wrap { overflow-y: scroll; }
@@ -3285,7 +2608,7 @@ body.device-touch #side-panel .side-panel-wrap { overflow-y: scroll; }
 	margin: 0;
 }
 
-body.side-panel-open #side-panel { left: 60px; }
+body.side-panel-open #side-panel { right: 0; }
 
 body.side-panel-left.side-panel-open #side-panel {
 	left: 0;
@@ -10102,7 +9425,7 @@ ul.tab-nav li a i {
 	font-size: 12px !important;
 }
 
-.side > li > a:hover {
+.sidenav > li > a:hover {
 	background-color: #F5F5F5;
 	color: #222;
 }
