--- a/CS310/divtags/static/divtags/css/style.css
+++ b/CS310/divtags/static/divtags/css/style.css
@@ -80,11 +80,15 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+#page-menu-options h6 {
+	margin-bottom: 10px;
+}
+
 .page-menu-button {
 	text-align:center;
 	position: fixed;
 	right: 20px;
-	top: 140px;
+	top: 120px;
 	width:50px;
 	height:50px;
 	border-radius: 5px;
@@ -100,6 +104,10 @@ input:checked + .slider:before {
 	line-height:50px;
 }
 
+#page-object-dropdown {
+	width: 150px;
+}
+
 #element-menu-button {
 	right: 85px;
 	display:none;
@@ -108,7 +116,7 @@ input:checked + .slider:before {
 .side-menu {
 	position: fixed;
 	right: 20px;
-	top: 190px;
+	top: 170px;
 	width:250px;
 	border-radius: 5px;
 	background-color: rgba(0,0,0,0.6);
