--- a/sample/app/templates/Group.html
+++ b/sample/app/templates/Group.html
@@ -16,10 +16,8 @@
 				<ul id="user-menu-pages-list">
 				{% if session['username'] %}
 					<li><a href="{{ url_for('Home') }}">Home</a></li>
-					<li><a href="{{ url_for('Groups') }}">Groups</a></li>
 					<li><a href="{{ url_for('Bills') }}">Bills</a></li>
 					<li><a href="{{ url_for('History') }}">History</a></li>
-					<li><a href="{{ url_for('Settings') }}">Settings</a></li>
 					<li><a href="{{ url_for('logout') }}">Logout</a></li>
 				{% else %}
 					<li><a href="{{ url_for('Register') }}">Register</a></li>
@@ -34,8 +32,35 @@
 <a href="{{ url_for('EditGroup') }}"><div class="element" id="25" onclick="selectElement(this.id)" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 240px; left: 30px; width: 110px; height: 30px;"><p class="element-text" contenteditable="false">Edit Group</p></div></a>
 <a href="{{ url_for('EditGroup') }}"><div class="element" id="25" onclick="selectElement(this.id)" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 240px; left: 30px; width: 110px; height: 30px;"><p class="element-text" contenteditable="false">Edit Group</p></div></a>
 <h1 class="element" id="26" onclick="selectElement(this.id)" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 180px; left: 370px;"><div class="element-text" contenteditable="false"><span style="font-weight: normal;">My Outstanding Payments</span></div></h1>
-<h1 class="element" id="24" onclick="selectElement(this.id)" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 410px; left: 370px;"><div class="element-text" contenteditable="true"><span style="font-weight: normal;">Money Owed to Me</span></div></h1>
-<a href="{{ url_for('AddBill') }}"><div class="element" id="27" onclick="selectElement(this.id)" style="color: rgb(230, 184, 0); background-color: rgb(155, 0, 0); padding: 10px 0px 0px 120px; top: 620px; left: 370px; width: 310px; height: 60px;"><p class="element-text" contenteditable="true"><span style="font-size: large;">New Bill</span></p></div></a>
+<h1 class="element" id="24" onclick="selectElement(this.id)" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 470px; left: 370px;"><div class="element-text" contenteditable="true"><span style="font-weight: normal;">Money Owed to Me</span></div></h1>
+<a href="{{ url_for('AddBill') }}"><div class="element" id="27" onclick="selectElement(this.id)" style="color: rgb(230, 184, 0); background-color: rgb(155, 0, 0); padding: 12px 0px 0px 90px; top: 90px; left: 910px; width: 240px; height: 60px;"><p class="element-text" contenteditable="true"><span style="font-size: large;">New Bill</span></p></div></a>
+<div class="element" id="32" onclick="selectElement(this.id)" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 280px; left: 30px; width: 280px; height: 380px;">
+	<table class="table">
+		{% for row in multiquery_32 %}
+		<tr>
+			<td>{{ row.username }}</td>
+		</tr>
+		{% endfor %}
+	</table>
+</div>
+<div class="element" id="58" onclick="selectElement(this.id)" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 240px; left: 360px; width: 790px; height: 230px;">
+	<table class="table">
+		<tr>
+			<th>desc</th>
+			<th>amount</th>
+			<th>group</th>
+			<th>owner</th>
+		</tr>
+		{% for row in multiquery_58 %}
+		<tr>
+			<td>{{ row.desc }}</td>
+			<td>{{ row.amount }}</td>
+			<td>{{ row.group }}</td>
+			<td>{{ row.owner }}</td>
+		</tr>
+		{% endfor %}
+	</table>
+</div>
 		</div>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/load.js') }}"></script>
 	</body>
