--- a/sample/app/templates/MyGroups.html
+++ b/sample/app/templates/MyGroups.html
@@ -18,6 +18,8 @@
 					<li><a href="{{ url_for('Home') }}">Home</a></li>
 					<li><a href="{{ url_for('Bills') }}">Bills</a></li>
 					<li><a href="{{ url_for('History') }}">History</a></li>
+					<li><a href="{{ url_for('Settings') }}">Settings</a></li>
+					<li><a href="{{ url_for('MyGroups') }}">MyGroups</a></li>
 					<li><a href="{{ url_for('logout') }}">Logout</a></li>
 				{% else %}
 					<li><a href="{{ url_for('Register') }}">Register</a></li>
@@ -27,26 +29,16 @@
 			</nav>
 		</div>
 		<div class='element-container'>
-<h1 class="element" id="26" onclick="selectElement(this.id)" style="color: rgb(155, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 100px;"><div class="element-text" contenteditable="false">Edit Group</div></h1>
-<form class="element" id="27" method=POST action="{{ url_for('EditGroup') }}" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 180px; left: 20px; width: 310px; height: 200px;">
-	<div class="form-group">
-		<label for="Group-field">Group</label>
-		<select class="form-control" name="Group">
-		{% for option in Group_options %}
-			<option value="{{ option._id }}">{{ option.Name }}</option>
+<h1 class="element" id="19" onclick="selectElement(this.id)" style="color: rgb(155, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 100px;"><div class="element-text" contenteditable="false">My Groups</div></h1>
+<div class="element" id="24" onclick="selectElement(this.id)" style="color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0); padding: 0px; top: 170px; left: 10px; width: 350px; height: 380px;">
+	<table class="table">
+		{% for row in multiquery_24 %}
+		<tr>
+			<td><a href="{{ url_for('Group', Groupid=row._id) }}">{{ row.Name }}</a></td>
+		</tr>
 		{% endfor %}
-		</select>
-	</div>
-	<div class="form-group">
-		<label for="User-field">User</label>
-		<select class="form-control" name="User">
-		{% for option in User_options %}
-			<option value="{{ option._id }}">{{ option.username }}</option>
-		{% endfor %}
-		</select>
-	</div>
-	<button type="submit" class="btn btn-block" style="text-transform:uppercase;">add Group_users</button>
-</form>
+	</table>
+</div>
 		</div>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/load.js') }}"></script>
 	</body>
