CS310-7 Fixing commit

--- a/CS310/divtags/static/divtags/css/sandbox.css
+++ b/CS310/divtags/static/divtags/css/sandbox.css
@@ -118,6 +118,10 @@
 	position: absolute;
 }
 
+.element:hover {
+	border: 1px dashed black;
+}
+
 .element-editor {
 	position: absolute;
 	top: 80px;
