--- a/CS310/divtags/templates/divtags/project-content.html
+++ b/CS310/divtags/templates/divtags/project-content.html
@@ -180,11 +180,11 @@
 			<button class="element-text-edit-btn" id="element-text-align-right-btn"><i class="icon-align-right2"></i></button>
 		</div>
 	</div>
-	<div class="row" style="margin-bottom:10px;">
+	<!-- <div class="row" style="margin-bottom:10px;">
 		<div class="col-sm-12" id="element-text-buttons-3">
 			<button class="element-text-edit-btn" id="element-text-link-btn"><i class="icon-line-link"></i></button>
 			<button class="element-text-edit-btn" id="element-text-unlink-btn"><i class="icon-unlink"></i></button>
-			<!-- <button class="element-text-edit-btn" id="element-text-insert-image-btn"><i class="icon-line-image"></i></button> -->
+			<button class="element-text-edit-btn" id="element-text-insert-image-btn"><i class="icon-line-image"></i></button>
 		</div>
 	</div>
 	<div class="row" id="element-text-link-container" style="margin-bottom:20px; display:none;">
@@ -194,7 +194,7 @@
 		<div class="col-sm-3">
 			<button id="element-text-link-button">Add</button>
 		</div>
-	</div>
+	</div> -->
 	
 	<div class="row" style="margin-bottom:20px;">
 		<div class="col-sm-6">Text: <br><input class="form-control element-colors" id="element-colour-text" type="color" value="#ff0000"/></div>
