--- a/CS310/divtags/static/divtags/css/style.css
+++ b/CS310/divtags/static/divtags/css/style.css
@@ -122,6 +122,7 @@ input:checked + .slider:before {
 	background-color: rgba(0,0,0,0.6);
 	color: #ffffff;
 	padding:10px;
+	overflow: auto;
 }
 
 .side-menu h4, .side-menu h6 {
